WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264231
Regression(
268700@main
) ~0.6% regression on Speedometer 2 on iPhone
https://bugs.webkit.org/show_bug.cgi?id=264231
Summary
Regression(268700@main) ~0.6% regression on Speedometer 2 on iPhone
Chris Dumez
Reported
2023-11-05 15:05:54 PST
~0.6% regression on Speedometer 2 on iPhone from dropping uncheckedAppend() in
268700@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2023-11-05 15:06:16 PST
<
rdar://116706935
>
Chris Dumez
Comment 2
2023-11-05 15:13:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20017
EWS
Comment 3
2023-11-05 21:43:53 PST
Committed
270254@main
(9b178a5d519f): <
https://commits.webkit.org/270254@main
> Reviewed commits have been landed. Closing PR #20017 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug