Source/JavaScriptCore/runtime/JSObject.cpp
@@ -4073,7 +4073,7 @@ void JSObject::putOwnDataPropertyBatching(VM& vm, const RefPtr<UniquedStringImpl
             PropertyOffset offset;
             if (Structure* newStructure = Structure::addPropertyTransitionToExistingStructure(structure, propertyName, 0, offset)) {
                 structure = newStructure;
-                offsets.append(offset);
+                offsets.unsafeAppendWithoutCapacityCheck(offset);
                 continue;
             }
 
@@ -4081,7 +4081,7 @@ void JSObject::putOwnDataPropertyBatching(VM& vm, const RefPtr<UniquedStringImpl
             offset = structure->get(vm, propertyName, currentAttributes);
             if (offset != invalidOffset) {
                 structure->didReplaceProperty(offset);
-                offsets.append(offset);
+                offsets.unsafeAppendWithoutCapacityCheck(offset);
                 continue;
             }
 
@@ -4101,7 +4101,7 @@ void JSObject::putOwnDataPropertyBatching(VM& vm, const RefPtr<UniquedStringImpl
             ASSERT(newStructure->isValidOffset(offset));
 
             structure = newStructure;
-            offsets.append(offset);
+            offsets.unsafeAppendWithoutCapacityCheck(offset);
         }
 
         // Flush batching here. Note that it is possible that offsets.size() is not equal to size, if we stop batching due to transition-watchpoint-firing.
